chore: improve build script

--- a/playground/index.html
+++ b/playground/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-
+<button>click to download font</button>
 </body>
 <script type="module" src="/index.ts"></script>
 </html>
